add authentication on swagger
